# OptiENEA

./: .gitignore  AmmoniaProblem.txt  Code.7z  README.md  main.py  pyproject.toml
lib/: example_modfile.mod
lib/Classes/: problem.py  unit.py
lib/Functions/: GUI.py  helpers.py  inputParser.py  inputWriter.py  outputParser.py  parametricAnalysis.py  simulationManager.py
problem_types/CEC/: mod_file.mod
problem_types/LP/: data_parameters.mustache  data_sets.mustache  mod_file.mod  mod_file_WINDFARM.mod
src/OptiENEA/archive/: main.py
src/OptiENEA/classes/: amplpy.py  layer.py  objective_function.py  output.py  parameter.py  parametric_runs.py  problem.py  problem_data.py  problem_parameters.py  project.py  set.py  typical_periods.py  unit.py  variable.py
src/OptiENEA/classes/units/: process.py  unit.py  utility.py
src/OptiENEA/helpers/: helpers.py
src/OptiENEA/lib/: default_entities.yml  units_default_values.yml
src/OptiENEA/lib/Functions/: helpers.py  outputParser.py  simulationManager.py
test/: test_problem_data
test/DATA/test_parametric_runs/: Scenarios.xlsx  timeseries_data.csv  units.yml
test/DATA/test_problem/: general.yml  timeseries_data.csv  units.yml
test/DATA/test_problem/test_problem_1/: timeseries_data.csv  units.yml
test/DATA/test_problem/test_problem_2/: general.yml  timeseries_data.csv  units.yml
test/DATA/test_problem/test_problem_3/: general.yml
test/DATA/test_problem/test_problem_main/: units.yml
test/DATA/test_problem_data/: general.txt  units.txt  units.yml
test/DATA/test_typical_periods/: test_typical_periods_day.yml
test/DATA/test_unit/: test_market_tsdata.csv  test_process_tsdata.csv  test_utility_tsdata.csv
test/DATA/test_unit/data/: power_test_process.csv  (+2 more)
test/classes/: test_parametric_runs.py  test_problem.py  test_problem_data.py  test_problem_parameters.py  test_typical_periods.py  test_unit.py
test/classes/problem/: test_problem_functions.py  test_problem_main.py  test_problems.py
test/classes/unit/: test_market.py  test_process.py  test_storageUnit.py  test_unit.py  test_utility.py
(+7 files in other folders)
