[build-system]
requires = ["setuptools>=61.0", "wheel]
build-backend = "setuptools.build_meta"

[project]
name = "OptiENEA"
version = "1.0.0"
authors = [
  { name="Francesco Baldi", email="francesco.baldi86@gmail.com" }
]
description = "A package to setup and run MILP system optimization problems using AMPL"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas",
    "matplotlib",
    "numpy",
    "xlsxwriter",
    "pyyaml",
    "amplpy"
    ]

[project.urls]
"Homepage" = "https://github.com/francescobaldi86/OptiENEA"
"Bug Tracker" = "https://github.com/francescobaldi86/OptiENEA/issues"

[project.optional-dependencies]
dev = ["flake8", "pytest"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "test",
]

[tool.setuptools.packages.find]
include = ["OptiENEA*"]

[tool.setuptools.package-data]
"OptiENEA" = ["lib/*"]
